mostly done models, need touchups

--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -1,4 +1,4 @@
-<!-- Including the base here makes the login not load -->
+<!-- Including the base here makes the login not load - remember to add the %s -->
 <!--{ extends 'blog/base.html' } -->
 
 
