--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,5 +1,7 @@
+
+
 .page-header{
-    background-color: #ff9400;
+    background-color: #0f1ddd;
     margin-top: 0;
     padding:20px 20px 20px 20px;
 
@@ -46,8 +48,8 @@ h1, h2, h3, h4 {
 }
 
 h1 a {
-    color: #2a9600;
-    font-family: 'Lobster';
+    color: #0f1ddd;
+
 }
 
 body {
