--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,65 +11,83 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-    </head>
-<div class="container">
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed"
-                toggle="collapse" data-target="#navbar" aria-expanded="false"
-                aria-controls="navbar">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-        </button>
 
-      <a class="navbar-brand" href="{% url 'home' %}">
-         <img src="{% static 'images/logo.png' %}" height="40" width="40" >
-      </a>
-    </div>
-      <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div id="navbar-header" class="collapse navbar-collapse">
-        <button href="{% url 'blog' %}" type="button" class="btn btn-primary">Storm Chasers Blog</button>
-    </div>
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <style>
+
+        .navbar .navbar-nav {
+        display: inline-block;
+        float: none;
+        vertical-align: center;
+        }
+
+        .navbar .navbar-collapse {
+        text-align: center;
+        }
+
+        .gi-4x{font-size: 1.3em;}
+
+        /* Remove the navbar's default margin-bottom and rounded borders */
+        .navbar {
+            margin-bottom: 0;
+            border-radius: 0;
+        }
+        .row.content {
+            height: 450px
+        }
+        </style>
+
+    </head>
+<body>
+
+<nav class="navbar navbar-inverse">
+<div class="container-fluid">
+   <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#topNavbar">
+         <!--<span class="sr-only">Toggle navigation</span>-->
+         <span class="icon-bar"></span>
+         <span class="icon-bar"></span>
+         <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" src="{% static 'images/logo.png' %}" href="{% url 'login' %}">Storm Chasers Blog</a>
+       <!--<img src="{% static 'images/logo.png' %}" height="60" width="60" >-->
+
+   </div>
+<div class="collapse navbar-collapse" id="topNavbar">
       <ul class="nav navbar-nav">
       <form class="navbar-form navbar-center">
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Search">
+                    <input type="text" class="form-control" placeholder="Search Tags">
                 </div>
-          <button type="submit"><span class="glyphicon glyphicon-search gi-4x"></span></button>
+                <button type="submit" class="btn btn-primary">Chase!</button>
       </form>
       </ul>
-        <ul class="nav navbar-nav navbar-right">
-                {% if user.is_authenticated %}
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-                            <span class="caret"></span>
-                        </a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="{% url 'logout' %}"><i class="fa fa-btn fa-sign-out"></i>Logout</a></li>
-                        </ul>
-                    </li>
-                {% else %}
-                    <li>
-                        <button href="{% url 'login' %}" type="button" class="btn btn-primary">Sign In/Up</button>
-                    </li>
-                {% endif %}
-        </ul>
-      </ul>
-    </div>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+      <div class="navbar navbar-right">
+          <!--<li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>-->
+          {% if user.is_authenticated %}
+          <a href="{% url 'logout' %}">
+          <button type="submit" class="btn btn-success" style="padding: 14px 20px">Logout
+          </button></a>
+          {% else %}
+           <a href="{% url 'login' %}">
+              <button type="submit" class="btn btn-primary" style="padding: 14px">Sign In / Up
+           </button></a>
+          {% endif %}
+      </div>
+</div>
+</div>
 </nav>
 
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <!-- How do we center the buttons? -->
-        <div class="navbar-default bg-dark center" id="myNavbar">
+<nav class="navbar navbar-default" role="navigation">
+<div class="container">
+   <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#btmNavbar">
+         <span class="sr-only">Toggle navigation</span>
+         <span class="icon-bar"></span>
+         <span class="icon-bar"></span>
+         <span class="icon-bar"></span>
+      </button>
+    </div>
+            <div class="collapse navbar-collapse" id="btmNavbar">
             <ul class="nav navbar-nav">
                 <li><a href="{% url 'home' %}">Home</a></li>
                 <li><a href="{% url 'dashboard' %}">Dashboard</a></li>
@@ -80,9 +98,11 @@
                 <li><a href="{% url 'locations' %}">Locations</a></li>
             </ul>
         </div>
-    </div>
-    </div>
+</div>
 </nav>
+</div>
+</body>
+
     <div class="content container">
         <div class="row">
             <div class="col-md-8">
@@ -91,4 +111,5 @@
             </div>
         </div>
     </div>
+
 </html>
