--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -61,7 +61,7 @@
       <ul class="nav navbar-nav">
       <form class="navbar-form navbar-center">
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Search Tags">
+                    <input type="text" size="55" class="form-control" placeholder="Search Tags">
                 </div>
                 <button type="submit" class="btn btn-primary">Chase!</button>
       </form>
