--- a/blog/templates/blog/new_post.html
+++ b/blog/templates/blog/new_post.html
@@ -10,43 +10,57 @@
         </head>
 
 <body>
-                 <!--List of uploaded documents -->
-                {% if images %}
-                        <ul>
-                        {% for image in images %}
-                                <li><a href="{{ image.image.url }}">{{ image.image.name }}
-                                <img src="{{ image.image.url }}" alt="{{ image.image.name }}">
-                                </a></li>
-                        {% endfor %}
-                        </ul>
-                {% else %}
-                        <p>No documents.</p>
-                {% endif %}
+
+
+    <!--<form method="post" class="post-form">{% csrf_token %}-->
+        <!--{{ form.as_p }}-->
+        <!--<button type="submit" class="save btn btn-default">Save</button>-->
+    <!--</form>-->
 
                  <!--Upload form. Note enctype attribute! -->
                 <form action="{% url 'new_post' %}" method="post" enctype="multipart/form-data">
                         {% csrf_token %}
-                        <p>{{ form.non_field_errors }}</p>
-                        <p>{{ form.image.label_tag }} </p>
+                        <h5>Post Title</h5>
+                        <p>{{ postForm.title }}</p>
+                        <h5>Post Text</h5>
+                        <p>{{ postForm.text }}</p>
+
+                        <!--<p>{{ imageForm.non_field_errors }}</p>-->
+                        <p>{{ imageForm.image.label_tag }} </p>
                         <p>
-                                {{ form.image.errors }}
-                                {{ form.image }}
+                                <!--{{ imageForm.image.errors }}-->
+                                {{ imageForm.image }}
                         </p>
+
                         <p><input type="submit" value="Upload" /></p>
                 </form>
 
         </body>
 
 
-  <form action="{% url 'new_post' %}" method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    <input id="id_image" type="file" name="myfile">
-    <button type="submit">Upload</button>
-  </form>
+  <!--<form action="{% url 'new_post' %}" method="post" enctype="multipart/form-data">-->
+    <!--{% csrf_token %}-->
+    <!--<input id="id_image" type="file" name="myfile">-->
+    <!--<button type="submit">BAD ONE</button>-->
+  <!--</form>-->
 
   {% if uploaded_file_url %}
     <p>File uploaded at: <a href="{{ uploaded_file_url }}">{{ uploaded_file_url }}</a></p>
   {% endif %}
 
   <p><a href="{% url 'home' %}">Return to home</a></p>
+
+   <!--List of uploaded documents -->
+   {% if images %}
+       <ul>
+   {% for image in images %}
+       <li><a href="{{ image.image.url }}">{{ image.image.name }}
+           <img src="{{ image.image.url }}" alt="{{ image.image.name }}">
+       </a></li>
+   {% endfor %}
+        </ul>
+   {% else %}
+       <p>No documents.</p>
+    {% endif %}
+
 {% endblock %}
