--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -24,20 +24,44 @@ div.desc {
     padding: 15px;
     text-align: center;
 }
+
+
 </style>
 </head>
 
-    <div class="post">
+
+    {% if user.is_authenticated %}
+    <div class="container" style="padding: 4px">
+        <a href="{% url 'post_edit' post_id=post.post_id %}">
+         <button type="button" class="btn btn-primary btn-block" style="font-size: 18px">Edit Post</button>
+        </a>
+    </div>
+    <div class="container" style="padding: 4px">
+        <a href="{% url 'post_edit' post_id=post.post_id %}">
+         <button type="button" class="btn btn-danger btn-block" style="font-size: 18px">Delete Post</button>
+        </a>
+    </div>
+        {% endif %}
+ <div class="w3-card-4 w3-margin w3-white">
+    <div class="w3-container">
+      <h2><b>{{ post.title }}</b></h2>
         {% if post.published_date %}
-            <div class="date">
-                {{ post.published_date }}
-            </div>
-        {% endif %}
-        {% if user.is_authenticated %}
-            <a class="btn btn-default" href="{% url 'post_edit' post_id=post.post_id %}"><span class="glyphicon glyphicon-pencil"></span></a>
-        {% endif %}
-        <h1>{{ post.title }}</h1>
-        <p>{{ post.text|linebreaksbr }}</p>
+      <h5><span class="w3-opacity">{{ post.published_date }}</span></h5>
+      {% endif %}
+    </div>
+
+    <div class="w3-container">
+      <p>{{ post.text|linebreaksbr }}</p>
+      <div class="w3-row">
+        <div class="w3-col m4 w3-hide-small">
+          <p><span class="w3-padding-large w3-right"><span class="w3-tag"></span></span></p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <hr>
+
+    <div class="post">
 
         {% for image in images %}
         <div class="gallery">
