--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -29,13 +29,33 @@ div.desc {
 
     <h1>Edit Post</h1>
     <form method="POST" class="post-form">{% csrf_token %}
-        {{ form.as_p }}
         <button type="submit" class="save btn btn-default">Save</button>
+ <div class="w3-card-4 w3-margin w3-white">
+    <div class="w3-container">
+      <h2><b>{{ form.title }}</b></h2>
+        {% if post.published_date %}
+      <h5><span class="w3-opacity">{{ post.published_date }}</span></h5>
+      {% endif %}
+    </div>
 
+    <div class="w3-container">
+      <p>{{ form.text|linebreaksbr }}</p>
+      <div class="w3-row">
+        <div class="w3-col m4 w3-hide-small">
+          <p><span class="w3-padding-large w3-right"><span class="w3-tag"></span></span></p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <hr>
         {% for image in images %}
         <div class="gallery">
   <a target="_blank" href="{{ image.image.url }}">
-    <img src="{{ image.image.url }}" alt="{{ image.image.name }}" width="300" height="200">
+      <p>{{  image.id }}</p>
+      <p>
+         <img src="{{ image.image.url }}" alt="{{ image.image.name }}" width="300" height="200">
+         <a href="{% url 'delete_image' id=image.id %}">Delete</a>
+      </p>
   </a>
 </div>
         {% endfor %}
