--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <title>Storm Chasers Blog</title>
     <h1>Homepage</h1>
+    <iframe src="http://www.youtube.com/embed/?listType=user_uploads&list=THEWEATHERCHANNEL" width="480" height="400"></iframe>
 </head>
 <body>
 
