tweaks and comments working

--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -39,7 +39,7 @@ div.desc {
     </div>
 
     <div class="w3-container">
-      <p>{{ form.text|linebreaksbr }}</p>
+      <p>{{ form.text }}</p>
       <div class="w3-row">
         <div class="w3-col m4 w3-hide-small">
           <p><span class="w3-padding-large w3-right"><span class="w3-tag"></span></span></p>
