--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -108,11 +108,11 @@
 
     <div class="content container" align="center">
         <div class="row">
-            <div class="col-md-8">
+            <!--<div class="col-md-8">-->
                 {% block content %}
                 {% endblock %}
             </div>
         </div>
-    </div>
+    <!--</div>-->
 
 </html>
