working on dash

--- a/blog/templates/blog/dashboard.html
+++ b/blog/templates/blog/dashboard.html
@@ -178,7 +178,31 @@
 <div id="map-canvas"></div>
 <div><h1>5 Day Weather Forecast</h1></div>
 
-
+<table class="table">
+  <thead>
+    <tr>
+    {% for header in headers %}
+      <th scope="col">{{ header }}</th>
+    {% endfor %}    
+    </tr>
+  </thead>
+  <tbody>
+    {% for times, avgTemps, maxTemps, minTemps, pressures, clouds, windSpeed, windDirection, weatherMains, weatherDescs in displayForecast %} 
+    <tr>
+      <td>{{ times.0 }}</td>
+      <td>{{ avgTemps.0 }}</td>
+      <td>{{ maxTemps.0 }}</td>
+      <td>{{ minTemps.0 }}</td>
+      <td>{{ pressures.0 }}</td>
+      <td>{{ clouds.0 }}</td>
+      <td>{{ windSpeed.0 }}</td>
+      <td>{{ windDirection.0 }}</td>
+      <td>{{ weatherMains.0 }}</td>
+      <td>{{ weatherDescs.0 }}</td>
+    </tr> 
+      {% endfor %}
+  </tbody>
+</table>
 </body>
 </html>
 {% endblock %}
