--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -157,7 +157,7 @@ Widely considered the pioneer of storm chasing is David Hoadley who began chasin
   <i class="fa fa-pinterest-p w3-hover-opacity"></i>
   <i class="fa fa-twitter w3-hover-opacity"></i>
   <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <p class="w3-medium">Powered by Crazy People Chasing Tornadoes </p>
+  <p class="w3-medium">Powered by Crazy People Chasing Tornadoes! </p>
 </footer>
 
 <script>
