--- a/blog/templates/blog/dashboard.html
+++ b/blog/templates/blog/dashboard.html
@@ -181,7 +181,7 @@
     <input type="text" size="15"  name="lon"  placeholder="Long">
 </div>
 <div style="padding: 10px;">
-    <input type="text" size="15"  name="zip"  placeholder="{{ user.profile.zipcode }}">
+    <input type="text" size="15"  name="zip"  value="{{ user.profile.zipcode }}">
 </div>
     <button type="submit" class="btn btn-primary">Go!</button>
 </div>
