--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -112,36 +112,37 @@ Widely considered the pioneer of storm chasing is David Hoadley who began chasin
   </div>
 
   <!-- The Tour Section -->
-  <div class="w3-black" id="tour">
-    <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
-      <h2 class="w3-wide w3-center">STORM CHASER MEETUPS</h2>
-      <p class="w3-opacity w3-center"><i>Stop in and say hi!</i></p><br>
+  <div class="w3-container" id="tour" style="background-image: url({% static 'images/weather_convention.jpg' %}); background-size:100% 100%;">
+    <div class="w3-container w3-content w3-padding-64" style="max-width:800px;">
+      <h2 class="w3-wide w3-center" style="color: #353535;"><b>STORM CHASER MEETUPS</b></h2>
+      <p class="w3-opacity w3-center w3-white" style="color: #353535;"><i>Stop in and say hi!</i></p><br>
 
       <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
         <div class="w3-third w3-margin-bottom">
-          <div class="w3-container w3-white">
+          <div class="w3-container w3-white w3-opacity w3-hover-opacity-off">
             <p><b>Oklahoma City</b></p>
             <p class="w3-opacity">Fri 8 June 2018</p>
-            <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+            <p>Downtown Convention Center OKC</p>
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
-          <div class="w3-container w3-white">
+          <div class="w3-container w3-white w3-opacity w3-hover-opacity-off">
             <p><b>Topeka Kansas</b></p>
             <p class="w3-opacity">Sat 28 July 2018</p>
-            <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+            <p>Capitol Plaza Hotel and Convention Center</p>
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
-          <div class="w3-container w3-white">
+          <div class="w3-container w3-white w3-opacity w3-hover-opacity-off">
             <p><b>Manhattan Kansas</b></p>
             <p class="w3-opacity">Sat 18 Aug 2018</p>
-            <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+            <p>Hilton Garden Inn Manhattan</p>
           </div>
+        </div>
         </div>
       </div>
     </div>
-  </div>
+
 
 
 
