--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -23,11 +23,9 @@ header {background-image: url("/static/images/blog_top.jpg");
 <!-- Navigation bar with social media icons -->
 <div class="w3-bar w3-black w3-hide-small">
   <a href="https://www.facebook.com/StormChasers/" class="w3-bar-item w3-button"><i class="fa fa-facebook-official"></i></a>
-  <a href="#" class="w3-bar-item w3-button"><i class="fa fa-instagram"></i></a>
-  <a href="#" class="w3-bar-item w3-button"><i class="fa fa-snapchat"></i></a>
-  <a href="#" class="w3-bar-item w3-button"><i class="fa fa-flickr"></i></a>
-  <a href="#" class="w3-bar-item w3-button"><i class="fa fa-twitter"></i></a>
-  <a href="#" class="w3-bar-item w3-button"><i class="fa fa-linkedin"></i></a>
+  <a href="https://www.instagram.com/reedtimmer/?hl=en" class="w3-bar-item w3-button"><i class="fa fa-instagram"></i></a>
+  <a href="https://www.flickr.com/groups/stormchaser/" class="w3-bar-item w3-button"><i class="fa fa-flickr"></i></a>
+  <a href="https://twitter.com/hashtag/stormchaser?lang=en" class="w3-bar-item w3-button"><i class="fa fa-twitter"></i></a>
 </div>
 
 
