--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -142,23 +142,16 @@ Widely considered the pioneer of storm chasing is David Hoadley who began chasin
         </div>
       </div>
     </div>
-
-
-
-
-
 </div>
 
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
-  <i class="fa fa-facebook-official w3-hover-opacity"></i>
-  <i class="fa fa-instagram w3-hover-opacity"></i>
-  <i class="fa fa-snapchat w3-hover-opacity"></i>
-  <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-  <i class="fa fa-twitter w3-hover-opacity"></i>
-  <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <p class="w3-medium">Powered by Crazy People Chasing Tornadoes! </p>
+  <i href="https://www.facebook.com/StormChasers/" class="fa fa-facebook-official w3-hover-opacity"></i>
+  <i href="https://www.instagram.com/reedtimmer/?hl=en" class="fa fa-instagram w3-hover-opacity"></i>
+  <i href="https://www.flickr.com/groups/stormchaser/" class="fa fa-pinterest-p w3-hover-opacity"></i>
+  <i href="https://twitter.com/hashtag/stormchaser?lang=en" class="fa fa-twitter w3-hover-opacity"></i>
+  <p class="w3-medium">Powered by Crazy People Chasing Tornadoes!</p>
 </footer>
 
 <script>
